# Savior

./: .gitignore  .saviorignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  PUBLISHING.md  README.md  TAKEOVER_REQUEST.md  publish.sh  pyproject.toml  requirements.txt  setup.py  test_debug.py
.github/workflows/: ci.yml
savior/: __init__.py  __main__.py  activity.py  autolaunch.py  cli.py  cli_refactored.py  cli_utils.py  cloud.py  conflicts.py  core.py  core_dedup.py  daemon.py  dedup.py  diff.py  incremental.py  launcher.py  recovery.py  run_savior.py  safety.py  zombie.py
savior-app/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
savior-app/electron/: main.ts  preload.ts  python-bridge.ts  savior-bridge.ts
savior-app/electron/ipc/: handlers.ts
savior-app/public/: index.html
savior-app/python/: app_bridge.py  backup_contents_reader.py
savior-app/python-deps/tqdm-4.67.1.dist-info/: RECORD
savior-app/python-deps/watchdog-6.0.0.dist-info/: RECORD
savior-app/release/: Savior-1.0.0-arm64.dmg.blockmap  builder-debug.yml  builder-effective-config.yaml
savior-app/release/.icon-icns/: icon.icns
savior-app/scripts/: generate-icon.js
savior-app/src/: App.tsx  index.tsx
savior-app/src/assets/: logo.ts
savior-app/src/components/: BackupContentsViewer.tsx  Logo.tsx  (+9 more)
savior/commands/: __init__.py  backup.py  cloud.py  daemon.py  recovery.py  restore.py  utility.py  zombie.py
tests/: __init__.py  test_cli_refactor.py  test_cloud.py  test_core.py  test_dedup.py  test_new_features.py  test_zombie.py
(+5 files in other folders)
